solved the overflow of image

--- a/styles/header.css
+++ b/styles/header.css
@@ -14,3 +14,9 @@
   display: none;
   cursor: pointer;
 }
+
+#photo-container {
+  overflow: hidden;
+  width: 100%;
+  height: auto;
+}
